# reddit-manus-demo

./: pyproject.toml
generate-demo/: ModelTest.py
src/: agent.py  clients.py  simple_ui.py  tools.py
