[project]
name = "reddit-agent-manus"
version = "0.1.0"
description = ""
authors = [
    {name = "ZHOU HUIWEI",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
